--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,43 @@
     flex-direction: row;
     justify-content: flex-end;
     font-family: 'Comfortaa', cursive;
+    
 }
 
 .navbar-brand{
     font-family: 'Comfortaa', cursive;
+    color: blue;
+    
 }
 
 .section1{
     background: url("../img/teamwork.jpg");
     height: 750px;
+    background-color: gray;
+    background-size: cover;
+    opacity: .9;
+    background-position-y: 50%;  
+    padding-top: 150px;
 }
 
-.section2{
+.layer {
+    background-color: rgba(248, 247, 216, 0.548);
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: 650px;
+    opacity: 0.3;
+}
+
+/* .section2 {
     height:750px;
+    text-align: center;
+    padding: 15px;
+} */
+
+.smallSection1{
+    text-align: left;
 }
 
 .buttons{
@@ -27,16 +51,18 @@
     margin-right: 10px;
     background: limegreen;
     font-family: 'Comfortaa', cursive;
+    
 }
 
 #org{
     margin-left: 10px;
     background: limegreen;
     font-family: 'Comfortaa', cursive;
+    
 }
 
 .welcome h1{
-    color: #ffbd4a;
+    color: blue;
     display: flex;
     justify-content: center;
     font-family: 'Roboto Slab', serif;
@@ -45,23 +71,25 @@
 .welcome p{
     display: flex;
     justify-content: center;
+    color: black;
 }
 
-#stuff{
+ #stuff{
     margin: auto;
     width: 50%;
-    padding: 60px;
+    padding: 50px;
     margin-top: 120px;
     border-radius: 25px;
     background-color: white;
     background-size: 10%;
-    opacity: .9; 
-}
+    opacity:.9
+    
+} 
 
 .navbar{
     margin: auto;
     width: 100%;
-    background-color: white;
+    background-color:white;
     height: 100px;
 }
 
@@ -77,3 +105,34 @@ body{
     font-size: 18px;
     box-shadow: 0 4px 2px -2px gray;
 }
+
+#bgimg{
+    position: relative;
+
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #ccc;
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+  }
