--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,4 +135,15 @@ body{
     display: none;
     overflow: hidden;
     background-color: #f1f1f1;
+    color: black;
   }
+
+  .collapsible {
+    font-family: 'Comfortaa', cursive;
+  }
+   
+ .test {
+    display: inline-flex;
+    justify-content: flex-start; 
+     
+}
