--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,3 +136,59 @@ body{
     overflow: hidden;
     background-color: #f1f1f1;
   }
+
+ .search{
+    margin: auto;
+    width: 50%;
+    padding: 50px;
+    margin-top: 120px;
+    border-radius: 25px;
+    background-color: gray;
+    background-size: 10%;
+    opacity:.9;
+    margin-bottom: 40px;
+ }
+
+ .search h3{
+     padding-bottom: 20px;
+ }
+
+ #zipcode-input{
+     width: 200px;
+ }
+
+ #searchSubmit{
+     display: inline-flex;
+     justify-content: flex-start;
+ }
+
+ #searchSubmit p{
+     margin-right: 10px;
+ }
+
+ #distance{
+     margin-left: 10px;
+ }
+
+ .rightArrow{
+     font-size: 60px;
+     margin-left: 20px;
+     color: #ffbd4a;
+ }
+
+ .event{
+    background: lightgray;
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 5px;
+    padding: 20px;
+ }
+
+ .event h4{
+     margin-left: 40px;
+ }
+
+ .event button{
+     margin-right: 40px;
+ }
