--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ body{
     font-family: 'Arimo', sans-serif;
 }
 
-.btn{
+.greenButton{
     display: inline-block;
     text-decoration: none;
     color: white;
@@ -137,60 +137,38 @@ body{
     background-color: #f1f1f1;
   }
 
- .search{
-    margin: auto;
-    width: 50%;
-    padding: 50px;
+  .search1{
     margin-top: 120px;
-    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+.back{
     background-color: gray;
-    background-size: 10%;
-    opacity:.9;
-    margin-bottom: 40px;
- }
+    padding: 20px;
+    border-radius: 10px;;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
- .search h3{
-     padding-bottom: 20px;
- }
-
- #zipcode-input{
-     width: 200px;
- }
-
- #searchSubmit{
-     display: inline-flex;
-     justify-content: flex-start;
- }
-
- #searchSubmit p{
-     margin-right: 10px;
- }
-
- #distance{
-     margin-left: 10px;
- }
-
+#zipcode-input{
+    min-width: 150px;
+}
  .rightArrow{
-     font-size: 60px;
-     margin-left: 20px;
+     font-size: 35px;;
      color: #ffbd4a;
+     margin-top: 45px;
+     margin-left: 50px;
  }
 
  .event{
     background: lightgray;
-    display: inline-flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 5px;
-    padding: 20px;
- }
-
- .event h4{
-     margin-left: 40px;
- }
-
- .event button{
-     margin-right: 40px;
+    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    margin-top: 10px;
  }
 
   .collapsible {
@@ -203,8 +181,35 @@ body{
  
 }
 
+.userWelcome{
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+}
+
+.userEvent{
+    background: lightgray;
+    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    margin-top: 10px;
+}
+
 .signUp{
     margin-right: 10px;
     background: limegreen;
     font-family: 'Comfortaa', cursive;
+}
+
+.volunteerButton{
+    margin-right: 10px;
+    background: limegreen;
+    font-family: 'Comfortaa', cursive;
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    padding: 10px 50px;
+    font-size: 18px;
+    box-shadow: 0 4px 2px -2px #cccccc;
 }
